--- a/arch/arm64/boot/dts/rockchip/rk3588s-orangepi-5-camera1.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3588s-orangepi-5-camera1.dtsi
@@ -5,11 +5,11 @@
  */
 
 &csi2_dphy0_hw {
-	status = "disabled";
+	status = "enable";
 };
 
 &csi2_dphy0 {
-	status = "disabled";
+	status = "enable";
 	ports {
 		#address-cells = <1>;
 		#size-cells = <0>;
@@ -20,14 +20,8 @@
 
 			mipi_in_ucam0: endpoint@0 {
 				reg = <0>;
-				remote-endpoint = <&ov13850_out2>;
-				data-lanes = <1 2>;
-			};
-
-			mipi_in_ucam1: endpoint@1 {
-				reg = <1>;
-				remote-endpoint = <&ov13855_out2>;
-				data-lanes = <1 2>;
+				remote-endpoint = <&ov9281_out2>;
+				data-lanes = <1>;
 			};
 		};
 		port@1 {
@@ -49,15 +43,15 @@
 
 	vm149c_p1: vm149c-p1@c {
 		compatible = "silicon touch,vm149c";
-		status = "disabled";
+		status = "enable";
 		reg = <0x0c>;
 		rockchip,camera-module-index = <1>;
 		rockchip,camera-module-facing = "back";
 	};
 
-	ov13850_1: ov13850-1@10 {
-		compatible = "ovti,ov13850";
-		status = "disabled";
+	ov9281_1: ov9281-1@10 {
+		compatible = "ovti,ov9281";
+		status = "enable";
 		reg = <0x10>;
 		clocks = <&cru CLK_MIPI_CAMARAOUT_M3>;
 		clock-names = "xvclk";
@@ -71,7 +65,7 @@
 		rockchip,camera-module-lens-name = "default";
 		lens-focus = <&vm149c_p1>;
 		port {
-			ov13850_out2: endpoint {
+			ov9281_out2: endpoint {
 				remote-endpoint = <&mipi_in_ucam0>;
 				data-lanes = <1 2>;
 			};
@@ -80,7 +74,7 @@
 
 	dw9714_p1: dw9714-p1@c {
 		compatible = "dongwoon,dw9714";
-		status = "disabled";
+		status = "enable";
 		reg = <0x0c>;
 		rockchip,camera-module-index = <0>;
 		rockchip,vcm-start-current = <10>;
@@ -88,33 +82,10 @@
 		rockchip,vcm-step-mode = <5>;
 		rockchip,camera-module-facing = "back";
 	};
-
-	ov13855_1: ov13855-1@36 {
-		compatible = "ovti,ov13855";
-		status = "disabled";
-		reg = <0x36>;
-		clocks = <&cru CLK_MIPI_CAMARAOUT_M3>;
-		clock-names = "xvclk";
-		pinctrl-names = "default";
-		pinctrl-0 = <&mipim0_camera3_clk>;
-		reset-gpios = <&gpio3 RK_PC4 GPIO_ACTIVE_HIGH>;
-		pwdn-gpios = <&gpio3 RK_PC6 GPIO_ACTIVE_HIGH>;
-		rockchip,camera-module-index = <0>;
-		rockchip,camera-module-facing = "back";
-		rockchip,camera-module-name = "CMK-OT2016-FV1";
-		rockchip,camera-module-lens-name = "default";
-		lens-focus = <&dw9714_p1>;
-		port {
-			ov13855_out2: endpoint {
-				remote-endpoint = <&mipi_in_ucam1>;
-				data-lanes = <1 2>;
-			};
-		};
-	};
 };
 
 &mipi2_csi2 {
-	status = "disabled";
+	status = "enable";
 	ports {
 		#address-cells = <1>;
 		#size-cells = <0>;
@@ -140,7 +111,7 @@
 };
 
 &rkcif_mipi_lvds2 {
-	status = "disabled";
+	status = "enable";
 	port {
 		cif_mipi_in2: endpoint {
 			remote-endpoint = <&mipi2_csi2_output>;
@@ -149,7 +120,7 @@
 };
 
 &rkcif_mipi_lvds2_sditf {
-	status = "disabled";
+	status = "enable";
 	port {
 		mipi2_lvds_sditf: endpoint {
 			remote-endpoint = <&isp0_vir1>;
@@ -158,7 +129,7 @@
 };
 
 &rkisp0_vir1 {
-	status = "disabled";
+	status = "enable";
 	port {
 		#address-cells = <1>;
 		#size-cells = <0>;
