--- a/arch/arm64/boot/dts/rockchip/rk3588s-orangepi-5-camera1.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3588s-orangepi-5-camera1.dtsi
@@ -18,9 +18,9 @@
 			#address-cells = <1>;
 			#size-cells = <0>;
 
-			mipi_in_ucam0: endpoint@0 {
-				reg = <0>;
-				remote-endpoint = <&ov9281_out2>;
+			mipi_in_ucam0: endpoint@1 {
+				reg = <1>;
+				remote-endpoint = <&ov9281_out1>;
 				data-lanes = <1>;
 			};
 		};
@@ -40,19 +40,10 @@
 	status = "okay";
 	pinctrl-names = "default";
 	pinctrl-0 = <&i2c7m0_xfer>;
-
-	vm149c_p1: vm149c-p1@c {
-		compatible = "silicon touch,vm149c";
-		status = "okay";
-		reg = <0x0c>;
-		rockchip,camera-module-index = <1>;
-		rockchip,camera-module-facing = "back";
-	};
-
-	ov9281_1: ov9281-1@10 {
+	ov9281_1: ov9281-1@60 {
 		compatible = "ovti,ov9281";
 		status = "okay";
-		reg = <0x10>;
+		reg = <0x60>;
 		clocks = <&cru CLK_MIPI_CAMARAOUT_M3>;
 		clock-names = "xvclk";
 		pinctrl-names = "default";
@@ -61,26 +52,15 @@
 		pwdn-gpios = <&gpio3 RK_PC6 GPIO_ACTIVE_HIGH>;
 		rockchip,camera-module-index = <0>;
 		rockchip,camera-module-facing = "back";
-		rockchip,camera-module-name = "CMK-CT0116";
+		rockchip,camera-module-name = "OV9281";
 		rockchip,camera-module-lens-name = "default";
-		lens-focus = <&vm149c_p1>;
+		#lens-focus = <&vm149c_p1>;
 		port {
-			ov9281_out2: endpoint {
+			ov9281_out1: endpoint {
 				remote-endpoint = <&mipi_in_ucam0>;
-				data-lanes = <1 2>;
+				data-lanes = <1>;
 			};
 		};
-	};
-
-	dw9714_p1: dw9714-p1@c {
-		compatible = "dongwoon,dw9714";
-		status = "okay";
-		reg = <0x0c>;
-		rockchip,camera-module-index = <0>;
-		rockchip,vcm-start-current = <10>;
-		rockchip,vcm-rated-current = <85>;
-		rockchip,vcm-step-mode = <5>;
-		rockchip,camera-module-facing = "back";
 	};
 };
 
